--- a/config/default-sharded/manager_config_patch.yaml
+++ b/config/default-sharded/manager_config_patch.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: controller-manager
   namespace: system
@@ -10,5 +10,5 @@ spec:
         - name: manager
           args:
             - "--metrics-addr=127.0.0.1:8080"
-            - "--enable-leader-election"
             - "--zap-devel=false"
+            - "--zap-log-level=error"
