Expose job backoffLimit to users

--- a/apis/flinkcluster/v1beta1/assets/test/flinkcluster_type_expected.yaml
+++ b/apis/flinkcluster/v1beta1/assets/test/flinkcluster_type_expected.yaml
@@ -47,6 +47,7 @@ spec:
       afterJobFails: KeepCluster
       afterJobCancelled: DeleteCluster
     mode: Detached
+    backoffLimit: 0
   flinkProperties:
     taskmanager.numberOfTaskSlots: "1"
   recreateOnUpdate: true
