Fix image tagging

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           IMG: ${{ steps.prep.outputs.image }}
       - name: Tag latest
-        run: docker tag ${{ steps.prep.outputs.image }} ${DOCKER_REPO}:latest
+        run: docker buildx imagetools create -t ${DOCKER_REPO}:latest ${{ steps.prep.outputs.image }}
       - name: Push latest
         run: docker push ${DOCKER_REPO}:latest
       - name: Push release manifest
